@@ -670,6 +670,24 @@ name|security
 operator|.
 name|token
 operator|.
+name|SecretManager
+operator|.
+name|InvalidToken
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|security
+operator|.
+name|token
+operator|.
 name|Token
 import|;
 end_import
@@ -2857,9 +2875,15 @@ block|}
 elseif|else
 if|if
 condition|(
+operator|(
 name|ex
 operator|instanceof
 name|InvalidBlockTokenException
+operator|||
+name|ex
+operator|instanceof
+name|InvalidToken
+operator|)
 operator|&&
 name|refetchToken
 operator|>
@@ -4715,9 +4739,15 @@ block|}
 elseif|else
 if|if
 condition|(
+operator|(
 name|e
 operator|instanceof
 name|InvalidBlockTokenException
+operator|||
+name|e
+operator|instanceof
+name|InvalidToken
+operator|)
 operator|&&
 name|refetchToken
 operator|>
